web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-deployment
  namespace: websocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-deployment
  template:
    metadata:
      labels:
        app: websocket-deployment
    spec:
      containers:
      - name: websocket
        image: sathish8329/websocket:4
        ports:
        - containerPort: 8006


---
apiVersion: v1
kind: Service
metadata:
  name: websocket-service
  namespace: websocket
spec:
  selector:
    app: websocket-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8006
  type: NodePort
